# Selemene-engine

./: .dockerignore  .env.example  .gitignore  AGENT28_IMPLEMENTATION.md  AGENT29_IMPLEMENTATION.md  AGENT30_SUMMARY.md  AGENT_34_INTEGRATION_GUIDE.md  AGENT_34_VERIFICATION_CHECKLIST.md  API_INTEGRATION_STATUS.md  AUTH_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CODEBASE_SUMMARY.md  Cargo.toml  DOCKER.md  DOCKER_VERIFICATION_CHECKLIST.md  Dockerfile  Dockerfile.prod  GENE_KEYS_WITNESS_PROMPTS.md  GHATI_API_DOCUMENTATION.md  GHATI_CALCULATION_STANDARDS.md  HUMAN_DESIGN_TIME_GATE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY_W1_S2_04_05.md  IMPROVEMENT_ANALYSIS.md  LEGACY_API_IMPLEMENTATION.md  PHASE_1_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE_AUTH.md  README.md  SWISS_EPHEMERIS_VERIFICATION.md  TASK_COMPLETION_SUMMARY.md  VERSIONING.md  WAVE3_COMPLETION_REPORT.md  create_test_dir.sh  docker-compose.monitoring.yml  docker-compose.yml  memory.md  package-lock.json  railway.toml  selemene_architecture.md  test_agent34.sh  (+6 more)
crates/engine-biofield/: Cargo.toml
crates/engine-biofield/src/: engine.rs  lib.rs  mock.rs  models.rs  wisdom.rs  witness.rs
crates/engine-biorhythm/: Cargo.toml
crates/engine-biorhythm/src/: lib.rs
crates/engine-face-reading/: Cargo.toml
crates/engine-face-reading/docs/: FACE_READING_ROADMAP.md
crates/engine-face-reading/src/: engine.rs  lib.rs  mock.rs  models.rs  wisdom.rs  witness.rs
crates/engine-gene-keys/: AGENT26_IMPLEMENTATION.md  Cargo.toml
crates/engine-gene-keys/benches/: gk_performance.rs
crates/engine-gene-keys/src/: engine.rs  frequency.rs  lib.rs  mapping.rs  models.rs  transformation.rs  wisdom.rs  witness.rs
crates/engine-gene-keys/tests/: integration_tests.rs  reference_charts.json  reference_validation_tests.rs
crates/engine-human-design/: ACTIVATION_IMPLEMENTATION.md  AGENT_20_COMPLETION_SUMMARY.md  AGENT_21_IMPLEMENTATION_SUMMARY.md  AGENT_23_COMPLETION_SUMMARY.md  AGENT_24_COMPLETION_SUMMARY.md  Cargo.toml  TASK_COMPLETION_SUMMARY.md  TEST_EXECUTION_SUMMARY.md  VALIDATION_REPORT_W1_S4.md  WITNESS_PROMPTS_REFERENCE.md  test_debug.rs
crates/engine-human-design/benches/: hd_performance.rs
crates/engine-human-design/data/: README.md
crates/engine-human-design/examples/: benchmark_26_activations.rs  chart_analysis_debug.rs  complete_26_activations.rs  debug_design_time.rs  find_diverse_charts.rs  generate_final_reference.rs  generate_reference_data.rs  sun_earth_activations.rs  test_all_activations.rs  test_compare.rs  test_debug_order.rs  test_ephemeris.rs  test_shesh_hd.rs
crates/engine-human-design/src/: activations.rs  analysis.rs  chart.rs  design_time.rs  engine.rs  ephemeris.rs  gate_sequence.rs  lib.rs  models.rs  wisdom.rs  wisdom_data.rs  witness.rs
crates/engine-human-design/tests/: README_REFERENCE_CHARTS.md  TEST_NOTES.md  W1_S4_01_COMPLETION.md  activation_tests.rs  analysis_tests.rs  design_time_tests.rs  reference_charts.json  reference_validation_tests.rs  wisdom_tests.rs
crates/engine-numerology/: Cargo.toml
crates/engine-numerology/src/: lib.rs
crates/engine-panchanga/: Cargo.toml
crates/engine-panchanga/src/: lib.rs
crates/engine-vedic-clock/: Cargo.toml
crates/engine-vedic-clock/src/: calculator.rs  choghadiya_integration.rs  dosha.rs  engine.rs  hora_integration.rs  integration.rs  lib.rs  models.rs  organ_clock.rs  panchang_integration.rs  panchanga_qualities.rs  recommendations.rs  wisdom.rs  witness.rs
crates/engine-vedic-clock/tests/: vedic_clock_tests.rs
crates/engine-vimshottari/: AGENT35_COMPLETION_REPORT.md  AGENT35_SUMMARY.md  AGENT_32_SUMMARY.md  AGENT_33_COMPLETION_REPORT.md  AGENT_33_SUMMARY.md  CALCULATION_REFERENCE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  SAMPLE_OUTPUT.md  validate_agent35.py
crates/engine-vimshottari/benches/: vim_performance.rs
crates/engine-vimshottari/src/: calculator.rs  engine.rs  lib.rs  models.rs  wisdom.rs  wisdom_data.rs  witness.rs
crates/noesis-api/: .env.example  Cargo.toml  RATE_LIMIT_QUICK_REFERENCE.md
crates/noesis-api/benches/: engine_comparison.rs
crates/noesis-api/examples/: test_rate_limit.sh
crates/noesis-api/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  middleware.rs
crates/noesis-api/tests/: e2e_engine_tests.rs  error_handling_tests.rs  gene_keys_integration.rs  integration_tests.rs  rate_limit_tests.rs  workflow_execution_tests.rs  workflow_tests.rs
crates/noesis-auth/: Cargo.toml
crates/noesis-auth/examples/: seed_api_keys.rs
crates/noesis-auth/src/: lib.rs  password.rs
crates/noesis-auth/tests/: postgres_auth_tests.rs
crates/noesis-bridge/: Cargo.toml
crates/noesis-bridge/src/: error.rs  lib.rs
crates/noesis-cache/: Cargo.toml
crates/noesis-cache/src/: l1_cache.rs  l2_cache.rs  l3_cache.rs  lib.rs
crates/noesis-cache/tests/: cache_tests.rs
crates/noesis-core/: Cargo.toml
crates/noesis-core/src/: error.rs  lib.rs  types.rs
crates/noesis-data/: Cargo.toml
crates/noesis-data/src/: db.rs  lib.rs
crates/noesis-integration/: Cargo.toml
crates/noesis-integration/src/: analysis.rs  lib.rs  synthesis.rs  tcm_layer.rs  verification.rs
crates/noesis-integration/tests/: shesh_birth_verification.rs
crates/noesis-metrics/: Cargo.toml
crates/noesis-metrics/src/: lib.rs
crates/noesis-orchestrator/: Cargo.toml
crates/noesis-orchestrator/benches/: workflow_bench.rs
crates/noesis-orchestrator/src/: lib.rs
crates/noesis-orchestrator/tests/: workflow_integration_tests.rs  workflow_parallel_tests.rs
crates/noesis-vedic-api/: Cargo.toml  MIGRATION.md  README.md
crates/noesis-vedic-api/src/: batch.rs  cache.rs  cached_client.rs  chart.rs  circuit_breaker.rs  client.rs  config.rs  dasha.rs  error.rs  lib.rs  logging.rs  metrics.rs  mocks.rs  rate_limiter.rs  resilience.rs  retry.rs  service.rs  types.rs  versioning.rs
crates/noesis-vedic-api/tests/: birth_chart_validation.rs  client_tests.rs  dasha_validation.rs  integration_tests.rs  navamsa_tests.rs  panchang_integration_test.rs  panchang_tests.rs  (+4 more)
crates/noesis-western-api/: Cargo.toml
docs/: CORS.md  (+8 more)
legacy/: Cargo.toml
(+410 files in other folders)
