[package]
name = "selemene-engine"
version = "2.1.0"
edition = "2021"
authors = ["Selemene Team"]
description = "High-performance consciousness calculation engine with 14+ systems"
repository = "https://github.com/Sheshiyer/Selemene-engine"
license = "MIT"
keywords = ["astrology", "consciousness", "vedic", "human-design", "gene-keys"]
categories = ["science", "api-bindings"]

[workspace]
resolver = "2"
members = [
    # Shared services
    "crates/noesis-core",
    "crates/noesis-data",
    "crates/noesis-cache",
    "crates/noesis-auth",
    "crates/noesis-metrics",
    "crates/noesis-witness",
    "crates/noesis-orchestrator",
    "crates/noesis-bridge",
    "crates/noesis-api",
    "crates/noesis-vedic-api",
    "crates/noesis-western-api",
    "crates/noesis-integration",
    # Vedic astrology API integration (FreeAstrologyAPI.com)

    # Rust consciousness engines
    "crates/engine-panchanga",
    "crates/engine-numerology",
    "crates/engine-biorhythm",
    "crates/engine-human-design",
    "crates/engine-vimshottari",
    "crates/engine-gene-keys",
    "crates/engine-vedic-clock",
    "crates/engine-biofield",
    "crates/engine-face-reading",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
