[package]
name = "selemene-engine-legacy"
version = "0.1.0"
edition = "2021"
authors = ["Selemene Team"]
description = "High-performance astronomical calculation engine for Panchanga and Vedic astrology (legacy — migrating to noesis workspace)"
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP framework
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async trait helpers
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Swiss Ephemeris
swisseph = "0.1"

# Hashing
md5 = "0.7"

# Error handling
thiserror = "1.0"

# Parallel processing
rayon = "1.8"
num_cpus = "1.0"

# Caching
lru = "0.12"
dashmap = "5.5"

# Rate limiting
governor = "0.6"

# Lazy static
lazy_static = "1.4"

# Prometheus metrics
prometheus = "0.13"

# Additional dependencies
redis = { version = "0.26", features = ["aio", "tokio-comp"] }
jsonwebtoken = "9.2"
futures = "0.3"
url = "2.5"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
