[package]
name = "engine-biofield"
version = "0.1.0"
edition = "2021"
description = "Biofield consciousness engine — biometric analysis compute core (stub with mock data)"

[dependencies]
noesis-core = { path = "../noesis-core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.43", features = ["full", "test-util"] }
