[package]
name = "engine-face-reading"
version = "0.1.0"
edition = "2021"
description = "Face Reading consciousness engine — Five Elements constitution analysis"

[dependencies]
noesis-core = { path = "../noesis-core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
