[package]
name = "engine-numerology"
version = "0.1.0"
edition = "2021"
description = "Numerology consciousness engine — Pythagorean + Chaldean systems"

[dependencies]
noesis-core = { path = "../noesis-core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
