[package]
name = "engine-vimshottari"
version = "0.1.0"
edition = "2021"
description = "Vimshottari Dasha consciousness engine — 120-year planetary period timeline"

[dependencies]
noesis-core = { path = "../noesis-core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
