[package]
name = "engine-vimshottari"
version = "0.1.0"
edition = "2021"
description = "Vimshottari Dasha consciousness engine — 120-year planetary period timeline"

[dependencies]
noesis-core = { path = "../noesis-core" }
engine-human-design = { path = "../engine-human-design" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1.43", features = ["full"] }

[[bench]]
name = "vim_performance"
harness = false
