[package]
name = "noesis-bridge"
version = "0.1.0"
edition = "2021"
description = "HTTP bridge adapter for TypeScript consciousness engines"

[dependencies]
noesis-core = { path = "../noesis-core" }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
tracing = "0.1"
thiserror = "1.0"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
