[package]
name = "noesis-cache"
version = "0.1.0"
edition = "2021"
description = "Multi-layer caching system (L1 in-memory, L2 Redis, L3 disk) for Noesis engines"

[dependencies]
noesis-core = { path = "../noesis-core" }
tokio = { version = "1.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
lru = "0.12"
md5 = "0.7"
redis = { version = "0.26", features = ["aio", "tokio-comp"] }
tracing = "0.1"
