[package]
name = "noesis-core"
version = "0.1.0"
edition = "2021"
description = "Core traits and types for the Tryambakam Noesis consciousness engine platform"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
