[package]
name = "noesis-data"
version = "0.1.0"
edition = "2021"
description = "Database layer for User Management and other persistent data"

[dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json", "macros"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"

# Internal dependencies
noesis-core = { path = "../noesis-core" }
