[package]
name = "noesis-integration"
version = "0.1.0"
edition = "2021"
authors = ["Tryambakam Noesis Team"]
description = "Integration layer for Vedic API, Vimshottari, Numerology, and TCM systems"
license = "MIT"

[dependencies]
# Core dependencies
noesis-core = { path = "../noesis-core" }
noesis-vedic-api = { path = "../noesis-vedic-api" }

# Engines
engine-vimshottari = { path = "../engine-vimshottari" }
engine-numerology = { path = "../engine-numerology" }
engine-panchanga = { path = "../engine-panchanga" }
engine-biorhythm = { path = "../engine-biorhythm" }

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
