[package]
name = "noesis-metrics"
version = "0.1.0"
edition = "2021"
description = "Prometheus metrics collection and OpenTelemetry tracing for Noesis platform"

[dependencies]
prometheus = "0.13"
lazy_static = "1.4"
tokio = { version = "1.0", features = ["time", "rt"] }
tracing = "0.1"
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }

[features]
default = []
jaeger = []
