[package]
name = "noesis-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Workflow orchestrator for parallel multi-engine execution"

[dependencies]
noesis-core = { path = "../noesis-core" }
noesis-cache = { path = "../noesis-cache" }
noesis-witness = { path = "../noesis-witness" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
