[package]
name = "noesis-western-api"
version = "0.1.0"
edition = "2021"
authors = ["Tryambakam Noesis Team"]
description = "FreeAstrologyAPI.com integration for Western astrology calculations"
license = "MIT"
repository = "https://github.com/tryambakam/noesis"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Caching
lru = "0.12"
dashed-map = { package = "dashmap", version = "5.5" }

# Logging
tracing = "0.1"

# Internal
noesis-core = { path = "../noesis-core" }

[dev-dependencies]
dotenv = "0.15"

[features]
default = []

